# Story-app

./: .env.sample  .env.semple  .gitignore  README.md  S3.ts  compose.yml  package-lock.json  package.json  project-requriment.txt  setup.sh
.github/workflows/: pipeline.yml
Docker/: Dockerfile  Dockerfile.nginx
backend/: .gitignore
backend/src/: server.dev.ts
backend/src/helpers/: jwtHelper.ts
backend/src/shared/: getFilePath.ts
client/mobile/: app.json  package-lock.json  package.json
client/mobile/app/: _layout.tsx  index.tsx
client/mobile/app/(pages)/: _layout.tsx  auth.tsx  createnewpassword.tsx  forgotpassword.tsx  langouage.tsx  onboading.tsx  signin.tsx  signup.tsx  verifyotp.tsx
client/mobile/app/(tabs)/: _layout.tsx  home.tsx  playlist.tsx  profile.tsx
client/mobile/app/types/: flag.ts  propes.ts
client/mobile/components/layout/: AppWrapper.tsx  MainWrapper.tsx
client/mobile/components/screen/: CartType.tsx  SliderScreen.tsx
conf/nginx/: default.conf
python/: convator.py  pyproject.toml
server/: package-lock.json  package.json  setup.sh
server/Docker/: Dockerfile
server/src/: server.ts
server/src/enums/: post.ts  subscription.ts
server/src/helpers/: paymentResHelper.ts
server/src/shared/: emailTemplate.ts
src/: app.ts  server.dev.ts  server.ts
src/DB/: seedAdmin.ts
src/config/: index.ts
src/enums/: post.ts  subscription.ts  user.ts
src/helpers/: emailHelper.ts  socketHelper.ts
src/regex/: user.ts
src/routes/: index.ts
src/shared/: emailTemplate.ts  homeTemplate.ts
src/types/: emailTamplate.ts  index.d.ts
(+38 files in other folders)
